name:                ride
version:             0.1.0.0
synopsis:            Ride 2014 Planning
description:         Planning for the Trans-Australia Ride of 2014
homepage:            http://ride.tmorris.net/
license:             AllRightsReserved
copyright:           Copyright (C) 2013 Tony Morris
author:              Tony Morris
maintainer:          Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
category:            Web
build-type:          Simple
cabal-version:       >=1.16

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/ride.git

executable ride
  default-language: Haskell2010
  main-is:          site.hs
  build-depends:      base   >=4.6 
                    , hakyll >=4.3 
                    , pandoc >= 1.11.1 
                    , containers >= 0.5.0.0
  ghc-options:
                    -Wall
                    -O2

